# CCIPS

./: .gitignore  DOCKER_COMPOSE_README.md  README.md  ccips-docker-helper.sh  docker-compose-local.yml  requirements.txt  setup-routes.sh
GUI-main/flaskr/static/: style.css
GUI-main/flaskr/templates/: base.html  create.html  delete.html
app/: Dockerfile  README.md  main.py
app/controller_i2nsf/: algs.py  config.py  handler.py  notifications.py  templates.py
app/logger/: log.py
app/nbi_swagger/: api.yaml  api_i2_nsf.py  logger.py  models.py  routers.py
app/sbi/: http_request.py  https_request.py  ssh_netconf.py  tls_netconf.py
app/templates/g2g/: add_sad_g2g.json  add_sad_g2g.xml  add_spd_g2g.json  add_spd_g2g.xml  del_spd_g2g.json  del_spd_g2g.xml
app/templates/h2h/: add_sad_h2h.json  add_sad_h2h.xml  add_spd_h2h.json  add_spd_h2h.xml  del_sad_h2h.json  del_sad_h2h.xml  del_spd_h2h.json
ccipc-cfgipsec/: README.md  interface_test.py
ccipc-cfgipsec/src/: pfkeyv2_entry.c  pfkeyv2_utils.c  sad_entry.c  sysrepo_print.h  utils.c
ccips-cfgipsec/: CMakeLists.txt  CMakeLists.txt.backup  Dockerfile  README.md  Readme.md  XFRM_Tunnel_EXAMPLE.md  stuffToInstall.txt  supervisord.conf  test_not_trusted.c  test_trusted.c
ccips-cfgipsec/cmd/i2nsf_ra/: CMakeLists.txt  main.c  test.c
ccips-cfgipsec/diagrams/: install_sad_entry.puml  install_spd_entry.puml  install_trusted_sad_entry.puml  monitor_sad_entry.puml  remove_sad_entry.puml  remove_spd_entry.puml
ccips-cfgipsec/src/: constants.h  log.c  log.h  messages.c  messages.h  pfkeyv2_entry.c  pfkeyv2_entry.h  pfkeyv2_utils.c  sad_entry.c  sad_entry.h  spd_entry.c  spd_entry.h  sysrepo_entries.c  sysrepo_entries.h  sysrepo_handler.c  sysrepo_handler.h  sysrepo_utils.c  sysrepo_utils.h  trust_client.c  trust_client.h  trust_handler.c  trust_handler.h  utils.c  utils.h  xfrm_netlink.c  xfrm_netlink.h
ccips_controller/: .gitignore  Dockerfile  README.md  go.mod  go.sum
ccips_controller/api/: api.yaml
ccips_controller/cmd/server/: main.go
ccips_controller/examples/: add_sad_g2g.xml  connection_example.go  del_sad_g2g.xml  example_command.sh  handler_example.go  handling_notification.go  removeEntries.go  request_example.json  sadb_expire_example.xml  send_notification.go
ccips_controller/i2nsf/: algs.go  config.go  handler.go  notifications.go  template_parsing_test.go  templates.go
ccips_controller/logger/: log.go
ccips_controller/python/cne-i2nsf_controller/: README.md  controller.py  logger.py  snippets.py
ccips_controller/swagger/: README.md  api_i2_nsf.go  logger.go  model_i2_nsf_request.go  model_inline_response_200.go  model_inline_response_200_1.go  model_inline_response_500.go  model_lifetime_config.go  model_node.go  routers.go
ccips_controller/templates/g2g/: add_sad_g2g.xml  add_spd_g2g.xml  del_sad_g2g.json  del_sad_g2g.xml  del_spd_g2g.json  del_spd_g2g.xml
ccips_controller/templates/h2h/: add_sad_h2h.xml  add_spd_h2h.xml  del_sad_h2h.xml  del_spd_h2h.json  del_spd_h2h.xml
ccips_python_controller/cne-i2nsf_controller/: api.py  i2nsf-controller.service  i2nsf.py
ccips_python_controller/i2nsf_dockerized/: README.md  docker-compose.yml  example_command.txt
ccips_python_controller/i2nsf_dockerized/agent/: Dockerfile
ccips_python_controller/i2nsf_dockerized/agent/cne-cfgipsec2/: .gitignore  configure  configure.ac
ccips_python_controller/i2nsf_dockerized/agent/cne-cfgipsec2/.deps/: ietf-ipsec.Po
ccips_python_controller/i2nsf_dockerized/agent/cne-cfgipsec2/base/: ikev2_entry.c  log.c  pfkeyv2_entry.c  pfkeyv2_entry.h  spd_entry.c  utils.h
ccips_python_controller/i2nsf_dockerized/agent/cne-cfgipsec2/client-xmls/case1/: h2h_transport_esp_enc_auth_h1_spd_pad.xml
ccips_python_controller/i2nsf_dockerized/agent/cne-cfgipsec2/client-xmls/case2/: g2g_tunnel_add_spd_12.xml  g2g_tunnel_del_sad_34501.xml  g2g_tunnel_del_sad_34502.xml  g2g_tunnel_delete_spd_11.xml  g2g_tunnel_delete_spd_12.xml  g2g_tunnel_esp_enc_auth_gw2.xml  h2h_transport_add_sad_34502.xml  h2h_transport_delete_sad_34502.xml  h2h_transport_esp_enc_auth_h1.xml  h2h_transport_esp_enc_auth_h1_n_sads.xml  h2h_transport_esp_enc_auth_h1_n_spds.xml  h2h_transport_esp_enc_auth_h1_n_spds_2.xml  h2h_transport_esp_enc_auth_h1_n_spds_sads.xml  h2h_transport_esp_enc_auth_h2.xml
ccips_python_controller/i2nsf_dockerized/agent/cne-cfgipsec2/client-xmls/case2/h2h_rekey/: 1_h2h_add_sad_in_h1.xml  1_h2h_add_sad_in_h2.xml
ccips_python_controller/i2nsf_dockerized/agent/cne-cfgipsec2/yang/: ietf-ipsec.yang-v1
ccips_python_controller/i2nsf_dockerized/controller/: Dockerfile
ccips_python_controller/i2nsf_dockerized/internal_test/: Dockerfile  entrypoint.sh
cfgipsec2/: INSTALL  INSTALL_Ubuntu18.04LTS  Makefile.in  README.md  configure
cfgipsec2/base/: ikev2_entry.h  log.h  pad_entry.c  pad_entry.h  pfkeyv2_entry.c  sad_entry.c  spd_entry.h  sysrepo_utils.c  utils.c
cfgipsec2/client-xmls/case1/: g2g_tunnel_esp_enc_auth_gw1_spd_pad.xml  g2g_tunnel_esp_enc_auth_gw2_spd_pad.xml  h2h_transport_esp_enc_auth_h2_ike.xml  h2h_transport_esp_enc_auth_h2_spd_pad.xml
cfgipsec2/client-xmls/case2/: g2g_tunnel_add_sad_34502.xml  (+5 more)
cfgipsec2/yang/: ietf-ipsec@2018-04-26.yang.tmp  ietf-ipsec@2018-09-13.yang
enarx_agent/: CMakeLists.txt  test_trusted.c
enarx_agent/CMakeModules/: FindSysrepo.cmake
enarx_agent/serializers/: log.back.c  sad_serializer.c  sad_serializer.h  serializer.h  spd_serializer.c  spd_serializer.h
enarx_agent/src/: constants.h
enarx_agent/src/pfkeyv2_utils/: pfkeyv2_entry.c  pfkeyv2_entry.h  pfkeyv2_utils.c
enarx_agent/src/sad_entry/: sad_entry.c  sad_entry.h
enarx_agent/src/spd_entry/: spd_entry.c  spd_entry.h
enarx_agent/src/sysrepo_utils/: sysrepo_entries.c  sysrepo_print.c  sysrepo_print.h  sysrepo_utils.c  sysrepo_utils.h
enarx_agent/src/utils/: utils.c  utils.h
enarx_agent/tests/sysrepo_load_config/: add_sad.xml  add_spd.xml  del_sad.xml  del_spd.xml  delete.py  delete.sh  install.py
flaskr/: __init__.py  config.py  create.py  delete.py  view.py
flaskr/templates/: delete.html  view.html
(+39 files in other folders)
